# linalg-tester

./: .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  TODO.md
.github/workflows/: ci.yml
examples/dd_blas/: dd_conv.c  run_test.sh
examples/dd_mumps/: dd_lapack_solve.c  run_test.sh
examples/openblas_complex_double/: complex_double_conv.c
examples/openblas_double/: gfortran_stubs.c  run_test.sh
examples/openblas_float/: float_conv.c
examples/quad_mumps/: quad_solve.f90  run_test.sh
examples/reference_blas/: double_conv.c  run_test.sh
examples/reference_mumps/: lapack_solve.c  mumps_solve.c  run_test.sh
examples/reference_quad/: qgemm.f90  qtrsm.f90  quad_conv.c  run_test.sh  utils.f90
mirror/: derive_sym.h  main.cpp  mirror_ctx.h  mirror_error.cpp  mirror_error.h  mirror_gen.cpp  mirror_gen.h  mirror_report.cpp  mirror_report.h
mirror/blacs/: mirror_blacs.h
mirror/blacs/broadcast/: blacs_gebs2d.cpp  blacs_trbs2d.cpp
mirror/blacs/combine/: blacs_gamn2d.cpp  blacs_gamx2d.cpp  blacs_gsum2d.cpp
mirror/blacs/context/: blacs_setup.cpp
mirror/blacs/p2p/: blacs_gesd2d.cpp  blacs_trsd2d.cpp
mirror/blas/: mirror_blas1.h  mirror_blas2.h  mirror_blas3.h
mirror/blas/level1/: asum.cpp  axpy.cpp  copy.cpp  crot.cpp  crscal.cpp  dot.cpp  dotc.cpp  dotu.cpp  iamax.cpp  nrm2.cpp  rot.cpp  rotg.cpp  rotm.cpp  rotmg.cpp  scal.cpp  swap.cpp
mirror/blas/level2/: gbmv.cpp  gemv.cpp  ger.cpp  gerc.cpp  geru.cpp  hbmv.cpp  hemv.cpp  her.cpp  her2.cpp  hpmv.cpp  hpr.cpp  hpr2.cpp  sbmv.cpp  spmv.cpp  spr.cpp  spr2.cpp  symv.cpp  syr.cpp  syr2.cpp  tbmv.cpp  tbsv.cpp  tpmv.cpp  tpsv.cpp  trmv.cpp  trsv.cpp
mirror/blas/level3/: gemm.cpp  hemm.cpp  her2k.cpp  herk.cpp  symm.cpp  syr2k.cpp  syrk.cpp  trmm.cpp  trsm.cpp
mirror/lapack/: auxiliary.h  eigenvalues.h  factorizations.h  mirror_lapack_common.h  solvers.h
mirror/lapack/auxiliary/: cgecon.cpp  cgetri.cpp  cgetrs.cpp  clacpy.cpp  clange.cpp  clansy.cpp  claswp.cpp  cpotri.cpp  cpotrs.cpp  gecon.cpp  getri.cpp  getrs.cpp  lacpy.cpp  lange.cpp  lanhe.cpp  lansy.cpp  laswp.cpp  orgqr.cpp  ormqr.cpp  potri.cpp  potrs.cpp  ungqr.cpp  unmqr.cpp
mirror/lapack/eigenvalues/: cgees.cpp  cgeev.cpp  cgesdd.cpp  cgesvd.cpp  gees.cpp  geev.cpp  gesdd.cpp  gesvd.cpp  heev.cpp  heevd.cpp  heevr.cpp  hegv.cpp  syev.cpp  syevd.cpp  syevr.cpp  sygv.cpp
mirror/lapack/factorizations/: cgebrd.cpp  cgelqf.cpp  cgeqrf.cpp  cgetrf.cpp  cpotrf.cpp  csytrf.cpp  gebrd.cpp  gelqf.cpp  geqrf.cpp  getrf.cpp  hetrd.cpp  hetrf.cpp  potrf.cpp  sytrd.cpp  sytrf.cpp
mirror/lapack/solvers/: cgbsv.cpp  cgels.cpp  cgelsd.cpp  cgesv.cpp  cgtsv.cpp  cposv.cpp  csysv.cpp  gbsv.cpp  gels.cpp  gelsd.cpp  gesv.cpp  gtsv.cpp  hesv.cpp  posv.cpp  sysv.cpp
mirror/pblas/: mirror_pblas1.h  mirror_pblas2.h  mirror_pblas3.h  mirror_pblas_common.h
mirror/pblas/level1/: pamax.cpp  pasum.cpp  paxpy.cpp  pcopy.cpp  pdot.cpp  pdotc.cpp  pdotu.cpp  pnrm2.cpp  pscal.cpp  pswap.cpp
mirror/pblas/level2/: pgemv.cpp  pger.cpp  pgerc.cpp  pgeru.cpp  phemv.cpp  pher.cpp  pher2.cpp  psymv.cpp  psyr.cpp  psyr2.cpp  ptrmv.cpp  ptrsv.cpp
mirror/pblas/level3/: pgemm.cpp  phemm.cpp  pher2k.cpp  pherk.cpp  psymm.cpp  psyr2k.cpp  psyrk.cpp  ptran.cpp  ptranc.cpp  ptranu.cpp  ptrmm.cpp  ptrsm.cpp
mirror/scalapack/: mirror_scalapack.h
mirror/scalapack/auxiliary/: cpgetrs.cpp  cplacpy.cpp  cplange.cpp  cplansy.cpp  cppotrs.cpp  cptrtri.cpp  pgetrs.cpp  placpy.cpp  plange.cpp  planhe.cpp  plansy.cpp  ppotrs.cpp  ptrtri.cpp
mirror/scalapack/eigenvalues/: cpgesvd.cpp  pgesvd.cpp  pheev.cpp  pheevd.cpp  psyev.cpp  psyevd.cpp
mirror/scalapack/factorizations/: cpgeqrf.cpp  cpgetrf.cpp  cppotrf.cpp  pgeqrf.cpp  pgetrf.cpp  ppotrf.cpp
mirror/scalapack/redistribution/: cpgemr2d.cpp  pgemr2d.cpp
mirror/scalapack/solvers/: cpgesv.cpp  cpposv.cpp  pgesv.cpp  pposv.cpp
src/: dmumps_struc.h  gemm_tester.cpp  main.cpp  mumps_tester.cpp  reference.cpp  reference.h  tester_utils.h  trsm_tester.cpp
src/blacs/: blacs.h  blacs_common.h
src/blacs/broadcast/: blacs_gebs2d.cpp  blacs_trbs2d.cpp
src/blacs/combine/: blacs_gamn2d.cpp  blacs_gamx2d.cpp  blacs_gsum2d.cpp
src/blacs/context/: blacs_setup.cpp
src/blacs/p2p/: blacs_gesd2d.cpp  blacs_trsd2d.cpp
src/blas/: blas_common.h  level1.h  level2.h  level3.h
src/blas/level1/: asum.cpp  axpy.cpp  copy.cpp  crot.cpp  crscal.cpp  dot.cpp  dotc.cpp  dotu.cpp  iamax.cpp  nrm2.cpp  rot.cpp  rotg.cpp  rotm.cpp  rotmg.cpp  scal.cpp  swap.cpp
src/blas/level2/: gbmv.cpp  gemv.cpp  ger.cpp  gerc.cpp  geru.cpp  hbmv.cpp  hemv.cpp  her.cpp  her2.cpp  hpmv.cpp  hpr.cpp  hpr2.cpp  sbmv.cpp  spmv.cpp  spr.cpp  spr2.cpp  symv.cpp  syr.cpp  syr2.cpp  tbmv.cpp  tbsv.cpp  tpmv.cpp  tpsv.cpp  trmv.cpp  trsv.cpp
src/blas/level3/: gemm.cpp  hemm.cpp  her2k.cpp  herk.cpp  symm.cpp  syr2k.cpp  syrk.cpp  trmm.cpp  trsm.cpp
src/core/: error_metrics.cpp  error_metrics.h  generators.cpp  generators.h  loader.h  mpfr_complex.h  mpfr_complex_types.h  mpfr_lapack_complex_utils.h  mpfr_lapack_utils.h  mpfr_types.h  report.cpp  report.h  sentinel.cpp  sentinel.h  tester_ctx.h
src/lapack/: auxiliary.h  eigenvalues.h  factorizations.h  lapack_common.h  solvers.h
src/lapack/auxiliary/: cgecon.cpp  cgetri.cpp  cgetrs.cpp  clacpy.cpp  clange.cpp  clansy.cpp  claswp.cpp  cpotri.cpp  cpotrs.cpp  gecon.cpp  getri.cpp  getrs.cpp  lacpy.cpp  lange.cpp  lanhe.cpp  lansy.cpp  laswp.cpp  orgqr.cpp  ormqr.cpp  potri.cpp  potrs.cpp  ungqr.cpp  unmqr.cpp
src/lapack/eigenvalues/: cgees.cpp  cgeev.cpp  cgesdd.cpp  cgesvd.cpp  gees.cpp  geev.cpp  gesdd.cpp  gesvd.cpp  heev.cpp  heevd.cpp  heevr.cpp  hegv.cpp  syev.cpp  syevd.cpp  syevr.cpp  sygv.cpp
src/lapack/factorizations/: cgebrd.cpp  (+14 more)
src/pblas/: pblas.h  pblas_common.h
src/scalapack/: scalapack.h  scalapack_common.h
test/: blacs_regression_output.csv  clapack_regression_output.csv  complex_regression_output.csv  cpblas_regression_output.csv  cscalapack_regression_output.csv  double_conv.dylib  pblas_regression_output.csv  regression_output.csv  run_regression.sh  scalapack_regression_output.csv
(+80 files in other folders)
